--- a/NEWS
+++ b/NEWS
@@ -139,6 +139,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #55544: Arithmetic's output WCS with where operator is not as expected.
   bug #55740: Diamond shapes in nearst-ngb interpolation affecting NoiseChisel.
   bug #55763: Crop not keeping Blank pixels on unsigned types.
+  bug #55844: WCS library (and thus all programs) can't deal with CROTAi values.
+
+
 
 
 
