--- a/THANKS
+++ b/THANKS
@@ -30,6 +30,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Nima Dehdilani                       nimadehdilani@gmail.com
     Antonio Diaz Diaz                    antonio@gnu.org
     Pierre-Alain Duc                     pierre-alain.duc@astro.unistra.fr
+    Elham Eftekhari                      elhamea@iac.es
     Gaspar Galaz                         ggalaz@astro.puc.cl
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
