Library (fits): gal_fits_name_save_as_string works with stdin
Until now, when this function was given a filename that is `NULL', it would
cause a segmentation fault in the program. But when the input is from the
standard input, the `filename' will be `NULL'. So it now returns `stdin' in
such cases.

This bug was reported by Elham Eftekhari.

This fixes bug #55845.

--- a/NEWS
+++ b/NEWS
@@ -140,6 +140,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #55740: Diamond shapes in nearst-ngb interpolation affecting NoiseChisel.
   bug #55763: Crop not keeping Blank pixels on unsigned types.
   bug #55844: WCS library (and thus all programs) can't deal with CROTAi values.
+  bug #55845: Crash when necessary column not found from standard input.
 
 
 
